[gd_scene load_steps=19 format=3 uid="uid://bdhl3wjtvr113"]

[ext_resource type="Script" path="res://Player.gd" id="1_wc8xc"]
[ext_resource type="PackedScene" uid="uid://h4gr2mpgmstq" path="res://bubbled_enemy.tscn" id="2_b8svv"]
[ext_resource type="Script" path="res://health_component.gd" id="2_elalu"]
[ext_resource type="PackedScene" uid="uid://d11k7524yknh6" path="res://3D/Rat/rat.tscn" id="3_q63yt"]
[ext_resource type="Script" path="res://HUD.gd" id="5_d18j7"]
[ext_resource type="Texture2D" uid="uid://dbor33jtyf166" path="res://2D/Dead/GraveOnly.png" id="6_pqjf7"]
[ext_resource type="Texture2D" uid="uid://d3r3jgdbk0vyv" path="res://2D/Menu/Quit.png" id="6_tq66w"]
[ext_resource type="Script" path="res://restartButton.gd" id="7_fkdph"]
[ext_resource type="Texture2D" uid="uid://cb8ptop3ciegu" path="res://2D/Menu/Restart.png" id="8_1skby"]
[ext_resource type="Script" path="res://quitButton.gd" id="8_d8xo1"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1m7lv"]

[sub_resource type="BoxMesh" id="BoxMesh_qkne2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_817gi"]
albedo_color = Color(0.964706, 0.160784, 0.211765, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_uotb2"]
size = Vector3(3.39816, 1.5479, 2.7475)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_v5r2a"]

[sub_resource type="BoxMesh" id="BoxMesh_qpckj"]

[sub_resource type="LabelSettings" id="LabelSettings_ulvgw"]
font_size = 30
font_color = Color(0.968627, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_v11jp"]
font_size = 30
font_color = Color(1, 1, 0, 1)

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("camera", "springArm", "healthComponent")]
collision_layer = 2
collision_mask = 21
script = ExtResource("1_wc8xc")
camera = NodePath("SpringArm3D/Camera3D")
springArm = NodePath("SpringArm3D")
healthComponent = NodePath("HealthComponent")
BubbledEnemyScene = ExtResource("2_b8svv")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_1m7lv")

[node name="Body" parent="." instance=ExtResource("3_q63yt")]

[node name="Skeleton3D" parent="Body/RatSkeleton" index="0"]
bones/0/position = Vector3(-0.304015, 7.0735, -32.5627)
bones/0/rotation = Quaternion(-0.620094, -0.378635, 0.358439, 0.586209)
bones/1/rotation = Quaternion(0.232985, 0.0646421, -0.0147125, 0.970218)
bones/2/rotation = Quaternion(0.0870919, 0.021112, -0.00613329, 0.995958)
bones/3/rotation = Quaternion(0.0870259, 0.0210898, -0.00632089, 0.995963)
bones/4/rotation = Quaternion(-0.0319579, -0.140488, -0.0173581, 0.989414)
bones/5/rotation = Quaternion(0.0430571, 0.302613, -0.0759108, 0.949109)
bones/7/rotation = Quaternion(-0.590029, -0.375385, 0.629049, -0.339484)
bones/8/rotation = Quaternion(0.252741, -0.711686, -0.100777, 0.647665)
bones/9/rotation = Quaternion(0.338852, 0.00480965, 0.24365, 0.90873)
bones/10/rotation = Quaternion(-0.293976, 0.911814, -0.128455, 0.256265)
bones/10/scale = Vector3(1, 0.999999, 1)
bones/18/rotation = Quaternion(0.00913765, -0.0806324, 0.118904, 0.989584)
bones/19/rotation = Quaternion(0.609546, -0.385491, 0.548367, 0.423254)
bones/20/rotation = Quaternion(0.172017, 0.739287, -0.0812541, 0.645959)
bones/21/scale = Vector3(1, 0.999999, 1)
bones/22/rotation = Quaternion(0.098135, 0.965442, -0.0527006, 0.235612)
bones/22/scale = Vector3(0.999999, 1, 1)
bones/26/rotation = Quaternion(-0.00180531, -0.0236343, 6.17455e-05, 0.999719)
bones/27/rotation = Quaternion(-0.213714, 0.0514751, 0.0720532, 0.972875)
bones/28/rotation = Quaternion(-0.15677, -0.0256061, -0.241848, 0.957224)
bones/29/rotation = Quaternion(-0.0255999, 0.00740009, -0.226055, 0.97375)
bones/30/scale = Vector3(1, 1, 0.999999)
bones/32/rotation = Quaternion(0.196475, 0.337453, 0.886382, -0.248696)
bones/33/rotation = Quaternion(-0.784545, -0.174546, 0.213405, 0.55541)
bones/33/scale = Vector3(1, 0.999999, 1)
bones/34/rotation = Quaternion(0.618309, 0.225075, -0.122704, 0.742953)
bones/34/scale = Vector3(0.999999, 1, 1)
bones/35/rotation = Quaternion(0.606412, -0.11897, 0.00227069, 0.786197)
bones/36/rotation = Quaternion(3.23169e-07, 1.28522e-07, -1.03261e-07, 1)
bones/37/rotation = Quaternion(-0.0828397, 0.58226, 0.797453, 0.134831)
bones/38/rotation = Quaternion(-0.893111, 0.0669699, -0.334882, 0.292782)
bones/39/rotation = Quaternion(0.609189, -0.142336, 0.162643, 0.763005)
bones/40/rotation = Quaternion(0.145292, -0.00670901, -0.0437458, 0.988398)
bones/41/rotation = Quaternion(-9.39705e-07, 1.35973e-07, 7.88131e-08, 1)
bones/42/rotation = Quaternion(-0.682622, -0.0402861, -0.0402861, 0.728547)
bones/45/scale = Vector3(1, 0.999999, 1)
bones/48/scale = Vector3(1, 0.999999, 1)

[node name="AnimationTree" parent="Body" index="2"]
parameters/dead/blend_amount = 0

[node name="WeaponRoot" type="Node3D" parent="Body"]

[node name="WeaponModel" type="MeshInstance3D" parent="Body/WeaponRoot"]
transform = Transform3D(0.401152, 0, 0, 0, 0.307252, 0, 0, 0, 2.42056, 0, 0, 1.6416)
visible = false
mesh = SubResource("BoxMesh_qkne2")

[node name="HeavyWeaponModel" type="MeshInstance3D" parent="Body/WeaponRoot"]
transform = Transform3D(0.401152, 0, 0, 0, 0.307252, 0, 0, 0, 2.42056, 0, 0, 1.6416)
visible = false
mesh = SubResource("BoxMesh_qkne2")
surface_material_override/0 = SubResource("StandardMaterial3D_817gi")

[node name="WeaponHitbox" type="Area3D" parent="Body/WeaponRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.48117)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body/WeaponRoot/WeaponHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.259739, 0)
shape = SubResource("BoxShape3D_uotb2")

[node name="HeavyWeaponHitbox" type="Area3D" parent="Body/WeaponRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.48117)
collision_layer = 0
collision_mask = 12

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body/WeaponRoot/HeavyWeaponHitbox"]
shape = SubResource("BoxShape3D_uotb2")

[node name="SpringArm3D" type="SpringArm3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.899115, 0.437712, 0, -0.437712, 0.899115, 0, 0, 0)
spring_length = 6.0

[node name="Camera3D" type="Camera3D" parent="SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 0.961799, -0.273757, 0, 0.273757, 0.961799, 0, 0.645698, 5.41997)

[node name="AudioListener3D" type="AudioListener3D" parent="SpringArm3D/Camera3D"]
current = true

[node name="HealthComponent" type="Node3D" parent="."]
script = ExtResource("2_elalu")

[node name="Body(depricated)" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_v5r2a")

[node name="Head" type="MeshInstance3D" parent="Body(depricated)"]
transform = Transform3D(1, 0, 0, 0, 0.299433, 0, 0, 0, 0.327416, 0, 0.516764, 0.399474)
mesh = SubResource("BoxMesh_qpckj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("5_d18j7")

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="info" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_bottom = 200.0
grow_horizontal = 0
text = "X to bubble
Y to kick"
label_settings = SubResource("LabelSettings_ulvgw")

[node name="currentWave" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
offset_right = 89.0
offset_bottom = 42.0
text = "hello world"
label_settings = SubResource("LabelSettings_v11jp")

[node name="health" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -42.0
offset_right = 89.0
grow_vertical = 0
text = "hello"
label_settings = SubResource("LabelSettings_ulvgw")

[node name="death" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -357.5
offset_top = -325.5
offset_right = 357.5
offset_bottom = 325.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_pqjf7")

[node name="quitButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -338.0
offset_top = -34.0
offset_right = 694.0
offset_bottom = 230.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.2, 0.2)
icon = ExtResource("6_tq66w")
script = ExtResource("8_d8xo1")

[node name="restartButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 140.0
offset_top = -34.0
offset_right = 1172.0
offset_bottom = 230.0
grow_vertical = 2
scale = Vector2(0.2, 0.2)
icon = ExtResource("8_1skby")
script = ExtResource("7_fkdph")

[node name="WalkSound" type="AudioStreamPlayer3D" parent="."]

[node name="AttackSound" type="AudioStreamPlayer3D" parent="."]

[node name="KickSound" type="AudioStreamPlayer3D" parent="."]

[node name="HurtSound" type="AudioStreamPlayer3D" parent="."]

[connection signal="health_depleted" from="HealthComponent" to="." method="_on_health_component_health_depleted"]

[editable path="Body"]
